# zenfolio

./: .gitignore  README.md  pyproject.toml  setup.py
src/zenfolio/: __init__.py  __main__.py  cli.py  content.py  deploy.py  init.py  seo_utils.py  server.py  utils.py  validators.py  zenfolio.py
src/zenfolio/models/: __init__.py  content_models.py  site_config.py
src/zenfolio/parsers/: __init__.py  base_parser.py  bibtex_parser.py  jupyter_parser.py  markdown_parser.py
src/zenfolio/templates/: __init__.py  config.py  content.py  index.md  news.py  projects.py  talks.py
src/zenfolio/themes/: __init__.py  base_theme.py  theme_builder.py
src/zenfolio/themes/minimal/: __init__.py  theme.py
src/zenfolio/themes/minimal/templates/: mathjax.html.j2  search_filter_bar.html.j2  seo_head.html.j2
src/zenfolio/themes/tailwind/: __init__.py  package.json  tailwind.config.js  tailwind.config.slow.js  test-fast.css  theme.py
src/zenfolio/themes/tailwind/css/: input.css  theme.css
src/zenfolio/themes/tailwind/templates/: base_layout.html.j2  blog_post_item.html.j2  blog_post_page.html.j2  footer.html.j2  landing_page.html.j2  navbar.html.j2  news_item.html.j2  notebook.html.j2  page.html.j2  page_layout.html.j2  profile_hero.html.j2  project_item.html.j2  publication_item.html.j2  search_filter_bar.html.j2  section.html.j2  service_item.html.j2
tests/: __init__.py  conftest.py  test_site.py
